# moza

./: .gitignore  CLAUDE.md  README.md  SECURITY.md  plugin.json  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
docs/superpowers/plans/: 2026-04-26-hat.md  2026-05-18-hat-config-manifest-sync.md  2026-07-05-rename-hat-to-moza.md  2026-07-07-ambient-project-env.md  2026-07-17-codex-plugin-support.md
docs/superpowers/specs/: 2026-04-26-hat-multi-identity-design.md  2026-05-18-hat-config-manifest-sync-design.md  2026-07-05-rename-hat-to-moza-design.md  (+1 more)
scripts/: migrate_from_hat.py  release_version.py
shell/: hat.bash  hat.zsh  moza.bash  moza.zsh
skills/hat/: SKILL.md
skills/moza/: SKILL.md
src/hat/: __main__.py  cli.py  config.py  env.py  ephemeral.py  manifest.py  shell.py
src/hat/backends/: base.py  (+1 more)
src/mien/: __main__.py  ambient.py  cli.py  config.py  env.py  ephemeral.py  gitsync.py  manifest.py  project.py  resolve.py  shell.py  statusline.py  verify.py
src/moza/: __main__.py  ambient.py  cli.py  config.py  env.py  ephemeral.py  manifest.py  oauth.py  resolve.py  secret_naming.py  shell.py  verify.py
tests/: test_ambient.py  test_backends_gcp.py  test_backends_keychain.py  test_backends_keyring.py  test_backends_oci.py  test_cli.py  test_codex_manifest.py  test_config.py  test_env.py  test_ephemeral.py  test_gitsync.py  test_manifest.py  test_oauth.py  test_project.py  test_resolve.py  test_secret_naming.py  test_shell.py  test_shell_wrappers.py  test_smoke.py  test_statusline.py  test_verify.py
(+32 files in other folders)
