[project]
name = "hat-cli"
version = "0.1.0"
description = "Multi-identity credential router for Google, GitHub, and Slack"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "httpx>=0.27",
  "google-auth-oauthlib>=1.2",
  "google-cloud-secret-manager>=2.20",
  "oci>=2.130",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-mock>=3.12",
]

[project.scripts]
hat = "hat.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
